Add ISSSE 2017 to services

--- a/services.html
+++ b/services.html
@@ -100,7 +100,8 @@
 
                     <div class="row row-pubblication">
                         <ul>
-                            <li><a href="http://www.sesa.unisa.it/seschool/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat</li>
+                            <li><a href="http://www.sesa.unisa.it/seschool/" target="blank">13th International Summer School on Software Engineering</a>: Scientific Secretariat</li>
+                            <li><a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat</li>
                         </ul>
                     </div>
                 </div>
