Add invited talks

--- a/services.html
+++ b/services.html
@@ -104,6 +104,14 @@
                             <li><a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat</li>
                         </ul>
                     </div>
+                    
+                    <h3>Invited Talks</h3>
+
+                    <div class="row row-pubblication">
+                        <ul>
+                            <li>Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Bruxelles, Belgium. March 23rd 2017.</li>
+                        </ul>
+                    </div>
                 </div>
             </article>
         </div>
