--- a/teaching.html
+++ b/teaching.html
@@ -116,6 +116,13 @@
                                 <td>2016/12</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
+							<tr>
+                                <td>Pasquale Martiniello</td>
+                                <td>Progettazione ed implementazione di un tool per la predizione dei difetti tramite l’utilizzo di tecniche Cross-Project</td>
+                                <td>BSc</td>
+                                <td>2017/03</td>
+                                <td>Prof. Andrea De Lucia</td>
+                            </tr>
                         </tbody>
                     </table>
                     <h3>Teaching Assistant</h3>
