--- a/publications.html
+++ b/publications.html
@@ -56,9 +56,17 @@
                     <h3>International Journals</h3>
                     <div class="row row-pubblication">
                         <p>
+                            <b>[J2]</b> D. Di Nucci, F. Palomba, R. Oliveto, A. De Lucia.<br/>
+                            Dynamic Selection of Classifiers in Bug Prediction: an Adaptive Method.<br/>
+                            IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI) - Special issue on Computational Intelligence for Software Engineering and Services Computing, to appear.
+                            <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:IWHjjKOFINEC" target="blank">[pdf]</a>
+                        </p>
+                    </div>
+                    <div class="row row-pubblication">
+                        <p>
                             <b>[J1]</b> D. Di Nucci, F. Palomba, G. De Rosa, G. Bavota, R. Oliveto, A. De Lucia.<br/>
                             A Developer Centered Bug Prediction Model.<br/>
-                            Transactions on Software Engineering (TSE), to appear.
+                            IEEE Transactions on Software Engineering (TSE), to appear.
                             <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:IWHjjKOFINEC" target="blank">[pdf]</a>
                         </p>
                     </div>
