Add PETrA tool demo pdf link

--- a/publications.html
+++ b/publications.html
@@ -78,6 +78,7 @@
                             PETrA: a Software-Based Tool for Estimating the Energy Profile of Android Applications.<br/>
                            In Proceedings of the 39th International Conference on Software Engineering (ICSE 2017) - Demonstration Track,
                            Buenos Aires, Argentina, 2017, 4 pages, to appear.
+                           <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:qUcmZB5y_30C" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
