Update publications details

--- a/publications.html
+++ b/publications.html
@@ -58,14 +58,14 @@
                         <p>
                             <b>[J2]</b> D. Di Nucci, F. Palomba, R. Oliveto, A. De Lucia.<br/>
                             Dynamic Selection of Classifiers in Bug Prediction: an Adaptive Method.<br/>
-                            IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI) - Special issue on Computational Intelligence for Software Engineering and Services Computing, to appear.
+                            IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI) - Special issue on Computational Intelligence for Software Engineering and Services Computing, 2017, 11 pages, to appear.
                         </p>
                     </div>
                     <div class="row row-pubblication">
                         <p>
                             <b>[J1]</b> D. Di Nucci, F. Palomba, G. De Rosa, G. Bavota, R. Oliveto, A. De Lucia.<br/>
                             A Developer Centered Bug Prediction Model.<br/>
-                            IEEE Transactions on Software Engineering (TSE), to appear.
+                            IEEE Transactions on Software Engineering (TSE), 2017, 21 pages, to appear.
                             <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:IWHjjKOFINEC" target="blank">[pdf]</a>
                         </p>
                     </div>
