--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,8 @@
                         <p>
                             <b>[J2]</b> D. Di Nucci, F. Palomba, R. Oliveto, A. De Lucia.<br/>
                             Dynamic Selection of Classifiers in Bug Prediction: an Adaptive Method.<br/>
-                            IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI) - Special issue on Computational Intelligence for Software Engineering and Services Computing, 2017, 11 pages, to appear.
+                            IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI) - Special issue on Computational Intelligence for Software Engineering and Services Computing, 2017, 11 pages, Volume 1 Issue 3, 202-212.
+                        <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:hC7cP41nSMkC" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -77,7 +78,7 @@
                             <b>[C8]</b> D. Di Nucci, F. Palomba, A. Prota, A. Panichella, A. Zaidman, A. De Lucia.<br/>
                             PETrA: a Software-Based Tool for Estimating the Energy Profile of Android Applications.<br/>
                            In Proceedings of the 39th International Conference on Software Engineering (ICSE 2017) - Demonstration Track,
-                           Buenos Aires, Argentina, 2017, 4 pages, to appear.
+                           Buenos Aires, Argentina, 2017, 4 pages, 3-6.
                            <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:qUcmZB5y_30C" target="blank">[pdf]</a>
                         </p>
                     </div>
