Update journals that I review

--- a/services.html
+++ b/services.html
@@ -82,10 +82,13 @@
                     <div class="row row-pubblication">
                         <ul>
                             <li>
-                                Journal of Software: Evolution and Process
+                                Advances in Software Engineering - Elsevier
                             </li>
                             <li>
-                                Advances in Software Engineering
+                                Arabian Journal for Science and Engineering - Springer
+                            </li>
+                            <li>
+                                Journal of Software: Evolution and Process - Wiley
                             </li>
                         </ul>
                     </div>
