Update external links

--- a/index.html
+++ b/index.html
@@ -78,13 +78,9 @@
                             <ul class="social">
                                 <li><a href="mailto:ddinucci@unisa.it" class="icon fa-envelope" target="blank"></a></li>
                                 <li><a href="skype:dario.dinucci" class="icon fa-skype" target="blank"></a></li>
-                                <li><a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" class="icon fa-linkedin"
-                                       target="blank"></a></li>
-                                <li><a href="https://www.researchgate.net/profile/Dario_Di_Nucci" class="ai ai-researchgate"
-                                       target="blank"></a></li>
-                                <!--<li><a href="" class="ai ai-google-scholar" target="blank"></a></li>-->
-                                <li><a href="https://plus.google.com/+DarioDiNucci" class="icon fa-google-plus"
-                                       target="blank"></a></li>
+                                <li><a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" class="icon fa-linkedin" target="blank"></a></li>
+                                <li><a href="https://www.researchgate.net/profile/Dario_Di_Nucci" class="ai ai-researchgate" target="blank"></a></li>
+                                <li><a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ&hl=it" class="ai ai-google-scholar" target="blank"></a></li>
                                 <li><a href="https://twitter.com/dardin88" class="icon fa-twitter" target="blank"></a></li>
                                 <li><a href="https://github.com/dardin88" class="icon fa-github" target="blank"></a></li>
                             </ul>
