--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                                 In 2011 he got his Bachelor's Degree (cum laude) from the University of Molise, with a thesis on Information Retrieval, advised by <a href="http://docenti.unimol.it/index.php?u=giovanni.capobianco" target="blank">Prof. Giovanni Capobianco</a>.<br class="br-index"/>
                                 He is an open-source enthusiast who likes to work on challenging project. In 2014 he completed the 10th edition of Google Summer of Code working on <a href="https://wiki.gnome.org/Apps/Maps" target="blank">Gnome Maps</a> and <a href="https://graphhopper.com/" target="blank">GraphHopper</a>.<br class="br-index"/>
 
-                                Currently he is a PhD student at the <a target="blank" href="http://www.sesa.unisa.it/">Software Engineering in Salerno Lab</a> in the University of Salerno, advised by <a href="http://docenti.unisa.it/003241/home" target="blank">Prof. Andrea De Lucia</a>.
-                                His research interests include search based software test, mining software repositories, and empirical software engineering.
+                                Currently he is a PhD candidate at the <a target="blank" href="http://www.sesa.unisa.it/">Software Engineering in Salerno Lab</a> in the University of Salerno, advised by <a href="http://docenti.unisa.it/003241/home" target="blank">Prof. Andrea De Lucia</a>.
+                                His research interests include bug prediction, search based software testing, energy optimization of mobile apps, mining software repositories, and empirical software engineering.
                                 During this experience he has been visiting student at the Software and Computer Technology department of the Delft University of Technology collaborating with the <a href="http://swerl.tudelft.nl/bin/view/Main/WebHome" target="blank">Software Engineering Research Group</a>.<br class="br-index"/>
                                 You can find his full Curriculum Vitae <a target="blank" href="Short Resume.pdf">here</a>.
                             </p>
