Update university address

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                         <div class="12u">
                             <p>Software Engineering Lab - Università degli Studi di Salerno<br/>
-                                Via Ponte don Melillo<br/>
+                                Via Giovanni Paolo II, 132<br/>
                                 84084 Fisciano (SA) - Italy<br/>
                                 Tel +39 089 963381 - Fax + 39 089 963303 </p>
                             <ul class="social">
