--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
                 <div class="container" style="margin-top: 2%">
                     <div class="row row-index">
                         <div class="2u">
-                            <span class="image fit"><img src="images/me3.png" alt=""/></span>
+                            <span class="image fit">
+                              <img src="images/me3.png" alt=""/>
+                            </span>
+                            <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
+                                <img src="images/my_orcid_qrcode.png" alt=""/>
+                                <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon">orcid.org/0000-0002-3861-1902
+                            </a>
                         </div>
                         <div class="10u">
                             <p style="text-align:justify; padding:10px">
