Few changes on projects and teaching

--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,20 @@
                     <div class="row row-project">
                         <div class="3u">
                             <a href="http://tinyurl.com/je2nxkd" target="blank">
+                                <img src="images/adoctor.png" alt="adoctor_icon"/>
+                            </a>
+                        </div>
+                        <div class="9u">
+                            <p style="text-align:justify">
+                                <b>aDoctor</b> is a tool able to identify 15 Android-specific code smells from the catalogue by Reimann et al.<br/>
+                                It is built on top of the Eclipse Java Development Toolkit (JDT)<br/>
+                                aDoctor is released under the MIT license and it is host <a href="https://github.com/fpalomba/aDoctor" target="blank">here</a>.<br/>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row row-project">
+                        <div class="3u">
+                            <a href="http://tinyurl.com/je2nxkd" target="blank">
                                 <img src="images/petra.png" alt="petra_icon"/>
                             </a>
                         </div>
