--- a/services.html
+++ b/services.html
@@ -54,12 +54,12 @@
             <article id="services">
                 <div class="container" style="margin-top: 2%">
 
-		            <h3>Organizing committee of SE events</h3>
+		    <h3>Organizing committee of SE events</h3>
 
                     <div class="row row-pubblication">
                         <ul>
                             <li>
-		                        <a href="http://www.sesa.unisa.it/seschool/" target="blank">13th International Summer School on Software Engineering</a>: Scientific Secretariat
+		                <a href="http://www.sesa.unisa.it/seschool/" target="blank">13th International Summer School on Software Engineering</a>: Scientific Secretariat
                             </li>
                             <li>
                                 <a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat
@@ -72,7 +72,7 @@
 	                <div class="row row-pubblication">
                         <ul>
                             <li>
-	                            VALID 2017: International Conference on Advances in System Testing and Validation Lifecycle - Athens, Greece
+	                        VALID 2017: International Conference on Advances in System Testing and Validation Lifecycle - Athens, Greece
                             </li>
                         </ul>
                     </div>
@@ -88,7 +88,13 @@
                                 Arabian Journal for Science and Engineering - Springer
                             </li>
                             <li>
+                                Journal of King Saud University: Computer and Information Sciences - Elsevier
+                            </li>
+                            <li>
                                 Journal of Software: Evolution and Process - Wiley
+                            </li>
+                            <li>
+                                Software Quality Journal - Springer
                             </li>
                         </ul>
                     </div>
