--- a/teaching.html
+++ b/teaching.html
@@ -116,11 +116,32 @@
                                 <td>2016/12</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
-							<tr>
+			    <tr>
                                 <td>Pasquale Martiniello</td>
                                 <td>Progettazione ed implementazione di un tool per la predizione dei difetti tramite l’utilizzo di tecniche Cross-Project</td>
                                 <td>BSc</td>
                                 <td>2017/03</td>
+                                <td>Prof. Andrea De Lucia</td>
+                            </tr>
+                            <tr>
+                                <td>Roberto Contaldo</td>
+                                <td>Integrazione in un ambiente di sviluppo integrato di una metodologia software per la stima di consumi energetici in applicazioni mobile</td>
+                                <td>BSc</td>
+                                <td>2017/10</td>
+                                <td>Prof. Andrea De Lucia</td>
+                            </tr>
+                            <tr>
+                                <td>Giuseppina Tufano</td>
+                                <td>Progettazione ed implementazione di un plugin per la predizione di difetti in progetti software</td>
+                                <td>BSc</td>
+                                <td>2017/10</td>
+                                <td>Prof. Andrea De Lucia</td>
+                            </tr>
+                            <tr>
+                                <td>Sara Zaino</td>
+                                <td>Progettazione ed implementazione di un plugin per la rilevazione di difetti energetici in applicazioni mobile</td>
+                                <td>BSc</td>
+                                <td>2017/10</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
                         </tbody>
