--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
                             <p style="text-align:justify">
                                 <b>aDoctor</b> is a tool able to identify 15 Android-specific code smells from the catalogue by Reimann et al.<br/>
                                 It is built on top of the Eclipse Java Development Toolkit (JDT)<br/>
-                                aDoctor is released under the MIT license and it is host <a href="https://github.com/fpalomba/aDoctor" target="blank">here</a>.<br/>
+                                aDoctor is released under the MIT license and it is hosted <a href="https://github.com/fpalomba/aDoctor" target="blank">here</a>.<br/>
                             </p>
                         </div>
                     </div>
