--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
                             <p style="text-align:justify">
                                 <b>PETrA</b> is a software able to estimate the energy consumption of method calls in Android apps.<br/>
                                 It is based on some Android tools that are Monkey, Batterystats, Systrace, and dmtracedump.<br/>
-                                PetrA is available <a href="http://tinyurl.com/je2nxkd" target="blank">here</a>.<br/>
+                                PETrA is available <a href="http://tinyurl.com/je2nxkd" target="blank">here</a>.<br/>
                             </p>
                         </div>
                     </div>
