--- a/teaching.html
+++ b/teaching.html
@@ -56,7 +56,7 @@
             <article id="teaching">
                 <div class="container" style="margin-top: 2%; margin-bottom: 5%">
                     <h3>Past (co)advised Bachelor and Master Students</h3>
-                    <table id="thesis" class="display" cellspacing="0" width="100%"  style="margin-bottom: 7%">
+                    <table id="thesis" class="display" cellspacing="0" width="100%">
                         <thead>
                             <tr>
                                 <th>Student</th>
