Translate student's theasis titles in English

--- a/teaching.html
+++ b/teaching.html
@@ -68,17 +68,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Simone Scalabrino</td>
-                                <td>Progettazione e realizzazione di un tool per la generazione automatica di casi di test</td>
+                                <td>Giuseppe De Rosa</td>
+                                <td>A combined model for the prediction of defects</td>
                                 <td>MSc</td>
-                                <td>2015/07</td>
+                                <td>2015/09</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
                             <tr>
-                                <td>Giuseppe De Rosa</td>
-                                <td>Un modello combinato per la predizione dei difetti</td>
+                                <td>Simone Scalabrino</td>
+                                <td>Design and implementation of a tool for the automatic generation of test cases</td>
                                 <td>MSc</td>
-                                <td>2015/09</td>
+                                <td>2015/07</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
                             <tr>
@@ -97,14 +97,14 @@
                             </tr>
                             <tr>
                                 <td>Fabiano Pecorelli</td>
-                                <td>Progettazione ed implementazione di un tool per la predizione dei difetti</td>
+                                <td>Design and implementation of a defect prediction tool</td>
                                 <td>BSc</td>
                                 <td>2016/09</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
                             <tr>
                                 <td>Elisa D'Eugenio</td>
-                                <td>CheckApp: uno strumento per il monitoraggio delle prestazioni di applicazioni Java</td>
+                                <td>CheckApp: a tool for monitoring Java application performance</td>
                                 <td>MSc</td>
                                 <td>2016/10</td>
                                 <td>Prof. Andrea De Lucia</td>
@@ -118,28 +118,28 @@
                             </tr>
 			    <tr>
                                 <td>Pasquale Martiniello</td>
-                                <td>Progettazione ed implementazione di un tool per la predizione dei difetti tramite l’utilizzo di tecniche Cross-Project</td>
+                                <td>Design and implementation of a defect prediction tool by using cross-project techniques</td>
                                 <td>BSc</td>
                                 <td>2017/03</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
                             <tr>
                                 <td>Roberto Contaldo</td>
-                                <td>Integrazione in un ambiente di sviluppo integrato di una metodologia software per la stima di consumi energetici in applicazioni mobile</td>
+                                <td>Design and implementation of a plugin for the detection of energy defects of mobile applications</td>
                                 <td>BSc</td>
                                 <td>2017/10</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
                             <tr>
                                 <td>Giuseppina Tufano</td>
-                                <td>Progettazione ed implementazione di un plugin per la predizione di difetti in progetti software</td>
+                                <td>Design and implementation of a defect prediction tool</td>
                                 <td>BSc</td>
                                 <td>2017/10</td>
                                 <td>Prof. Andrea De Lucia</td>
                             </tr>
                             <tr>
                                 <td>Sara Zaino</td>
-                                <td>Progettazione ed implementazione di un plugin per la rilevazione di difetti energetici in applicazioni mobile</td>
+                                <td>Implementation of a software energy estimation methodology in an integrated development environment</td>
                                 <td>BSc</td>
                                 <td>2017/10</td>
                                 <td>Prof. Andrea De Lucia</td>
