Minor fix to index

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </div>
                         <div class="10u">
                             <p style="text-align:justify; padding:10px">
-                                <strong>Dario Di Nucci</strong> was born in Isernia (Italy) on September, 3th, 1988.
+                                <strong>Dario Di Nucci</strong> was born in Isernia (Italy) on September 3th, 1988.
                                 He received (cum laude) the Master's Degree in Computer Science from the University of Salerno (Italy) in 2014 defending a thesis on Defect Prediction, advised by <a href="http://docenti.unisa.it/003241/home" target="blank">Prof. Andrea De Lucia</a>.<br class="br-index"/>
                                 In 2011 he got his Bachelor's Degree (cum laude) from the University of Molise, with a thesis on Information Retrieval, advised by <a href="http://docenti.unimol.it/index.php?u=giovanni.capobianco" target="blank">Prof. Giovanni Capobianco</a>.<br class="br-index"/>
                                 He is an open-source enthusiast who likes to work on challenging project. In 2014 he completed the 10th edition of Google Summer of Code working on <a href="https://wiki.gnome.org/Apps/Maps" target="blank">Gnome Maps</a> and <a href="https://graphhopper.com/" target="blank">GraphHopper</a>.<br class="br-index"/>
